<resources>
    <string name="app_name">udacity-inventory-app</string>
    <string name="app_title">Leaf Inventory App</string>
    <string name="empty_view_title_text">Its All Empty Here !!!</string>
    <string name="empty_view_subtitle_text">Try adding some products</string>
    <string name="stock_unit_name"><![CDATA[<stock_unit_name>]]></string>
    <string name="stock_unit_price"><![CDATA[<stock_unit_price>]]></string>
    <string name="sale_button_text">Sale</string>
    <string name="stock_unit_qty"><![CDATA[<quantity>]]></string>
    <string name="stock_unit_qty_label">Available</string>
    <string name="currency">₹ %128₹d</string>
    <string name="action_save">Save</string>
    <string name="action_add_dummy_product">Add Dummy Product</string>
    <string name="action_delete">Delete</string>
    <string name="stock_unit_name_label">Stock Unit Name</string>
    <string name="stock_unit_price_label">Stock Unit Price</string>
    <string name="add_quantity">+</string>
    <string name="subtract_quantity">-</string>
    <string name="stock_quantity_label">Stock Quantity</string>
    <string name="stock_price_label">Stock Price</string>
    <string name="supplier_name_label">Supplier Name</string>
    <string name="supplier_email_label">Supplier Email</string>
    <string name="supplier_phone_label">Supplier Phone</string>
    <string name="product_image_label">Product Image</string>
    <string name="add_image_button_text">Choose Image</string>
    <string name="detail_activity_title_new_stock_unit">Add a Stock Unit</string>
    <string name="detail_activity_title_edit_stock_unit">Edit Stock Unit</string>
    <string name="editor_insert_stock_unit_failed">Error with saving Stock Unit</string>
    <string name="editor_insert_stock_unit_successful">Stock Unit saved</string>
    <string name="editor_update_stock_unit_successful">Stock Unit updated</string>
    <string name="editor_update_stock_unit_failed">Error with updating Stock Unit</string>
    <string name="default_zero">0</string>
    <string name="add_quantity_button">+</string>
    <string name="subtract_quantity_button">-</string>
    <string name="stock_price_default_zero">0.00</string>
    <string name="editor_delete_stock_unit_failed">Error with deleting stock unit</string>
    <string name="editor_delete_stock_unit_successful">Stock Unit deleted</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_dialog_msg">Delete this Stock Unit ?</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="err_external_storage_permissions">Need permissions to get a product photo</string>
    <string name="no_image_url">android.resource://com.theleafapps.pro.udacityinventoryapp/drawable/product_image</string>
    <string name="no_image">"no images"</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="discard">Discard</string>
    <string name="action_order_more">Order More</string>
    <string name="mailText">Please Send 25 more of the product specified.\n\nLeaf Inventory</string>
</resources>
