<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/stock_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="150dp"
        android:src="@drawable/pen" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#E8F5E9"
        android:minHeight="150dp">

        <LinearLayout
            android:id="@+id/nameNprice"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stock_unit_name"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/stock_unit_name"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/stock_unit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/stock_unit_price"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/quantityNsale"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_toEndOf="@id/nameNprice"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stock_unit_quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/stock_unit_qty_label" />

            <TextView
                android:id="@+id/stock_unit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/stock_unit_qty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/sale_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:focusable="false"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sale_button_text" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>