<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.theleafapps.pro.udacityinventoryapp.StockDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/stock_image_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/product_image_label"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stock_image_label"
            android:layout_marginTop="24dp"
            android:minHeight="150dp"
            android:src="@drawable/product_image" />

        <Button
            android:id="@+id/add_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_image_view"
            android:layout_centerHorizontal="true"
            android:text="@string/add_image_button_text" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_stock_unit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_image_button"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/stock_unit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stock_unit_name_label"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add_quantity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/input_stock_unit_name"
            android:layout_marginTop="8dp"
            android:text="+" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_stock_unit_quantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_stock_unit_name"
            android:layout_toEndOf="@id/add_quantity_button">

            <EditText
                android:id="@+id/stock_unit_quantity"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/stock_quantity_label"
                android:maxLength="10"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/subtract_quantity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_stock_unit_name"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/input_stock_unit_quantity"
            android:text="-" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_stock_unit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_quantity_button"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/stock_unit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/stock_price_label"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_stock_unit_price"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_stock_unit_price"
                android:layout_marginTop="8dp"
                android:hint="@string/supplier_name_label"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_supplier_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_supplier_name"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/supplier_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/supplier_phone_label"
                android:inputType="phone"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_supplier_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_supplier_phone_number"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/supplier_email_label"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>
</ScrollView>